update md, html, css

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 
 <body>
     <div class="body">
-
-
         <div class="game">
             <table>
                 <tbody>
@@ -100,25 +98,23 @@
                 </tbody>
             </table>
         </div>
-
-
         <div class="turn">
-            <div><h1>Turn</h1></div>
-            <div><img src="img/blackCrown.png"></div>
-            <div><img src="img/redCrown.png"></div>
-            <div>
-                <p>Remaining: 10/12</p>
-                <p>Remaining: 10/12</p>
+            <div class="subturn2 black">
+                <img src="img/blackCrown.png">
+                <p>Remaining</p>
+                <h1>12/12</h1>
+            </div>
+            <div class="subturn1"><h1>Turn</h1></div>
+            <div class="subturn2 red">
+                <img src="img/redCrown.png">
+                <p>Remaining</p>
+                <h1>12/12</h1>
             </div>
         </div>
-
-
         <div class="info">
-            <h1>White Turn</h1>
+            <h1>Black's Turn</h1>
             <button>Reset</button>
         </div>
-
-
     </div>
 </body>
 </html>
