update JS progress 1

--- a/index.html
+++ b/index.html
@@ -12,17 +12,39 @@
 
 <body>
     <div class="body">
+
+
         <div class="game">
             <table>
                 <tbody>
                     <tr>
-                        <td class="yes"></td>
+                        <td class="yes red"></td>
                         <td></td>
-                        <td class="yes"></td>
+                        <td class="yes red"></td>
                         <td></td>
-                        <td class="yes"></td>
+                        <td class="yes red"></td>
                         <td></td>
-                        <td class="yes"></td>
+                        <td class="yes red"></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td class="yes red"></td>
+                        <td></td>
+                        <td class="yes red"></td>
+                        <td></td>
+                        <td class="yes red"></td>
+                        <td></td>
+                        <td class="yes red"></td>
+                    </tr>
+                    <tr>
+                        <td class="yes red"></td>
+                        <td></td>
+                        <td class="yes red"></td>
+                        <td></td>
+                        <td class="yes red"></td>
+                        <td></td>
+                        <td class="yes red"></td>
                         <td></td>
                     </tr>
                     <tr>
@@ -47,74 +69,60 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td class="yes"></td>
+                        <td class="yes black"></td>
                         <td></td>
-                        <td class="yes"></td>
+                        <td class="yes black"></td>
                         <td></td>
-                        <td class="yes"></td>
+                        <td class="yes black"></td>
                         <td></td>
-                        <td class="yes"></td>
+                        <td class="yes black"></td>
                     </tr>
                     <tr>
-                        <td class="yes"></td>
+                        <td class="yes black"></td>
                         <td></td>
-                        <td class="yes"></td>
+                        <td class="yes black"></td>
                         <td></td>
-                        <td class="yes"></td>
+                        <td class="yes black"></td>
                         <td></td>
-                        <td class="yes"></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td class="yes"></td>
-                        <td></td>
-                        <td class="yes"></td>
-                        <td></td>
-                        <td class="yes"></td>
-                        <td></td>
-                        <td class="yes"></td>
-                    </tr>
-                    <tr>
-                        <td class="yes"></td>
-                        <td></td>
-                        <td class="yes"></td>
-                        <td></td>
-                        <td class="yes"></td>
-                        <td></td>
-                        <td class="yes"></td>
+                        <td class="yes black"></td>
                         <td></td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td class="yes"></td>
+                        <td class="yes black"></td>
                         <td></td>
-                        <td class="yes"></td>
+                        <td class="yes black"></td>
                         <td></td>
-                        <td class="yes"></td>
+                        <td class="yes black"></td>
                         <td></td>
-                        <td class="yes"></td>
+                        <td class="yes black"></td>
                     </tr>
                 </tbody>
             </table>
         </div>
+
+
         <div class="turn">
-            <div class="subturn2 black">
+            <div class="subturn2 subblack">
                 <img src="img/blackCrown.png">
                 <p>Remaining</p>
                 <h1>12/12</h1>
             </div>
             <div class="subturn1"><h1>Turn</h1></div>
-            <div class="subturn2 red">
+            <div class="subturn2 subred">
                 <img src="img/redCrown.png">
                 <p>Remaining</p>
                 <h1>12/12</h1>
             </div>
         </div>
+
+
         <div class="info">
             <h1>Black's Turn</h1>
             <button>Reset</button>
         </div>
+
+
     </div>
 </body>
 </html>
