--- a/index.html
+++ b/index.html
@@ -17,85 +17,85 @@
         <div class="game">
             <table>
                 <tbody>
-                    <tr>
-                        <td class="yes red"></td>
-                        <td></td>
-                        <td class="yes red"></td>
-                        <td></td>
-                        <td class="yes red"></td>
-                        <td></td>
-                        <td class="yes red"></td>
-                        <td></td>
+                    <tr id="0">
+                        <td class="0 yes red"></td>
+                        <td class="1"></td>
+                        <td class="2 yes red"></td>
+                        <td class="3"></td>
+                        <td class="4 yes red"></td>
+                        <td class="5"></td>
+                        <td class="6 yes red"></td>
+                        <td class="7"></td>
                     </tr>
-                    <tr>
-                        <td></td>
-                        <td class="yes red"></td>
-                        <td></td>
-                        <td class="yes red"></td>
-                        <td></td>
-                        <td class="yes red"></td>
-                        <td></td>
-                        <td class="yes red"></td>
+                    <tr id="1">
+                        <td class="0"></td>
+                        <td class="1 yes red"></td>
+                        <td class="2"></td>
+                        <td class="3 yes red"></td>
+                        <td class="4"></td>
+                        <td class="5 yes red"></td>
+                        <td class="6"></td>
+                        <td class="7 yes red"></td>
                     </tr>
-                    <tr>
-                        <td class="yes red"></td>
-                        <td></td>
-                        <td class="yes red"></td>
-                        <td></td>
-                        <td class="yes red"></td>
-                        <td></td>
-                        <td class="yes red"></td>
-                        <td></td>
+                    <tr id="2">
+                        <td class="0 yes red"></td>
+                        <td class="1"></td>
+                        <td class="2 yes red"></td>
+                        <td class="3"></td>
+                        <td class="4 yes red"></td>
+                        <td class="5"></td>
+                        <td class="6 yes red"></td>
+                        <td class="7"></td>
                     </tr>
-                    <tr>
-                        <td></td>
-                        <td class="yes"></td>
-                        <td></td>
-                        <td class="yes"></td>
-                        <td></td>
-                        <td class="yes"></td>
-                        <td></td>
-                        <td class="yes"></td>
+                    <tr id="3">
+                        <td class="0"></td>
+                        <td class="1 yes"></td>
+                        <td class="2"></td>
+                        <td class="3 yes"></td>
+                        <td class="4"></td>
+                        <td class="5 yes"></td>
+                        <td class="6"></td>
+                        <td class="7 yes"></td>
                     </tr>
-                    <tr>
-                        <td class="yes"></td>
-                        <td></td>
-                        <td class="yes"></td>
-                        <td></td>
-                        <td class="yes"></td>
-                        <td></td>
-                        <td class="yes"></td>
-                        <td></td>
+                    <tr id="4">
+                        <td class="0 yes"></td>
+                        <td class="1"></td>
+                        <td class="2 yes"></td>
+                        <td class="3"></td>
+                        <td class="4 yes"></td>
+                        <td class="5"></td>
+                        <td class="6 yes"></td>
+                        <td class="7"></td>
                     </tr>
-                    <tr>
-                        <td></td>
-                        <td class="yes black"></td>
-                        <td></td>
-                        <td class="yes black"></td>
-                        <td></td>
-                        <td class="yes black"></td>
-                        <td></td>
-                        <td class="yes black"></td>
+                    <tr id="5">
+                        <td class="0"></td>
+                        <td class="1 yes black"></td>
+                        <td class="2"></td>
+                        <td class="3 yes black"></td>
+                        <td class="4"></td>
+                        <td class="5 yes black"></td>
+                        <td class="6"></td>
+                        <td class="7 yes black"></td>
                     </tr>
-                    <tr>
-                        <td class="yes black"></td>
-                        <td></td>
-                        <td class="yes black"></td>
-                        <td></td>
-                        <td class="yes black"></td>
-                        <td></td>
-                        <td class="yes black"></td>
-                        <td></td>
+                    <tr id="6">
+                        <td class="0 yes black"></td>
+                        <td class="1"></td>
+                        <td class="2 yes black"></td>
+                        <td class="3"></td>
+                        <td class="4 yes black"></td>
+                        <td class="5"></td>
+                        <td class="6 yes black"></td>
+                        <td class="7"></td>
                     </tr>
-                    <tr>
-                        <td></td>
-                        <td class="yes black"></td>
-                        <td></td>
-                        <td class="yes black"></td>
-                        <td></td>
-                        <td class="yes black"></td>
-                        <td></td>
-                        <td class="yes black"></td>
+                    <tr id="7">
+                        <td class="0"></td>
+                        <td class="1 yes black"></td>
+                        <td class="2"></td>
+                        <td class="3 yes black"></td>
+                        <td class="4"></td>
+                        <td class="5 yes black"></td>
+                        <td class="6"></td>
+                        <td class="7 yes black"></td>
                     </tr>
                 </tbody>
             </table>
@@ -108,7 +108,7 @@
                 <p>Remaining</p>
                 <h1>12/12</h1>
             </div>
-            <div class="subturn1"><h1>Turn</h1></div>
+            <div class="subturn1"><h1 id="subturn1">Turn</h1></div>
             <div class="subturn2 subred">
                 <img src="img/redCrown.png">
                 <p>Remaining</p>
@@ -118,7 +118,7 @@
 
 
         <div class="info">
-            <h1>Black's Turn</h1>
+            <h1 id="info">Red's Turn</h1>
             <button>Reset</button>
         </div>
 
