almost finish, final step

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Josh Checkers Game</title>
+    <title>Josh's Checkers Game</title>
+    <link rel="icon" href="img/icon.png">
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
 </head>
@@ -18,84 +19,84 @@
             <table>
                 <tbody>
                     <tr id="0">
-                        <td class="0 yes "></td>
+                        <td class="0 yes " id="10"></td>
                         <td></td>
-                        <td class="1 yes "></td>
+                        <td class="1 yes " id="11"></td>
                         <td></td>
-                        <td class="2 yes "></td>
+                        <td class="2 yes " id="12"></td>
                         <td></td>
-                        <td class="3 yes "></td>
+                        <td class="3 yes " id="13"></td>
                         <td></td>
                     </tr>
                     <tr id="1">
                         <td></td>
-                        <td class="0 yes "></td>
+                        <td class="0 yes " id="14"></td>
                         <td></td>
-                        <td class="1 yes "></td>
+                        <td class="1 yes " id="15"></td>
                         <td></td>
-                        <td class="2 yes "></td>
+                        <td class="2 yes " id="16"></td>
                         <td></td>
-                        <td class="3 yes "></td>
+                        <td class="3 yes " id="17"></td>
                     </tr>
                     <tr id="2">
-                        <td class="0 yes "></td>
+                        <td class="0 yes " id="18"></td>
                         <td></td>
-                        <td class="1 yes "></td>
+                        <td class="1 yes " id="19"></td>
                         <td></td>
-                        <td class="2 yes "></td>
+                        <td class="2 yes " id="20"></td>
                         <td></td>
-                        <td class="3 yes "></td>
+                        <td class="3 yes " id="21"></td>
                         <td></td>
                     </tr>
                     <tr id="3">
                         <td></td>
-                        <td class="0 yes"></td>
+                        <td class="0 yes " id="22"></td>
                         <td></td>
-                        <td class="1 yes"></td>
+                        <td class="1 yes " id="23"></td>
                         <td></td>
-                        <td class="2 yes"></td>
+                        <td class="2 yes " id="24"></td>
                         <td></td>
-                        <td class="3 yes"></td>
+                        <td class="3 yes " id="25"></td>
                     </tr>
                     <tr id="4">
-                        <td class="0 yes"></td>
+                        <td class="0 yes " id="26"></td>
                         <td></td>
-                        <td class="1 yes"></td>
+                        <td class="1 yes " id="27"></td>
                         <td></td>
-                        <td class="2 yes"></td>
+                        <td class="2 yes " id="28"></td>
                         <td></td>
-                        <td class="3 yes"></td>
+                        <td class="3 yes " id="29"></td>
                         <td></td>
                     </tr>
                     <tr id="5">
                         <td></td>
-                        <td class="0 yes "></td>
+                        <td class="0 yes " id="30"></td>
                         <td></td>
-                        <td class="1 yes "></td>
+                        <td class="1 yes " id="31"></td>
                         <td></td>
-                        <td class="2 yes "></td>
+                        <td class="2 yes " id="32"></td>
                         <td></td>
-                        <td class="3 yes "></td>
+                        <td class="3 yes " id="33"></td>
                     </tr>
                     <tr id="6">
-                        <td class="0 yes "></td>
+                        <td class="0 yes " id="34"></td>
                         <td></td>
-                        <td class="1 yes "></td>
+                        <td class="1 yes " id="35"></td>
                         <td></td>
-                        <td class="2 yes "></td>
+                        <td class="2 yes " id="36"></td>
                         <td></td>
-                        <td class="3 yes "></td>
+                        <td class="3 yes " id="37"></td>
                         <td></td>
                     </tr>
                     <tr id="7">
                         <td></td>
-                        <td class="0 yes "></td>
+                        <td class="0 yes " id="38"></td>
                         <td></td>
-                        <td class="1 yes "></td>
+                        <td class="1 yes " id="39"></td>
                         <td></td>
-                        <td class="2 yes "></td>
+                        <td class="2 yes " id="40"></td>
                         <td></td>
-                        <td class="3 yes "></td>
+                        <td class="3 yes " id="41"></td>
                     </tr>
                 </tbody>
             </table>
